--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "dev:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
+    "build": "npm run build:webpack",
+    "build:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 NEXT_PRIVATE_TURBOPACK=0 next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx"
+    "start:webpack": "next start",
+    "lint": "eslint . --ext .ts,.tsx",
+    "postinstall": "mkdir -p public/fonts/geist && cp node_modules/geist/dist/fonts/geist-sans/Geist-Variable.woff2 public/fonts/geist/GeistVF.woff2 && cp node_modules/geist/dist/fonts/geist-mono/GeistMono-Variable.woff2 public/fonts/geist/GeistMonoVF.woff2"
   },
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
@@ -14,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.0.0",
+    "geist": "^1.5.1",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "react": "19.2.0",
@@ -27,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
