--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.0.0",
+    "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
