--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postinstall": "mkdir -p public/fonts/geist && cp node_modules/geist/dist/fonts/geist-sans/Geist-Variable.woff2 public/fonts/geist/GeistVF.woff2 && cp node_modules/geist/dist/fonts/geist-mono/GeistMono-Variable.woff2 public/fonts/geist/GeistMonoVF.woff2"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
+    "@radix-ui/react-select": "^2.2.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.7.0",
