--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
     "build": "npm run build:webpack",
     "build:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 NEXT_PRIVATE_TURBOPACK=0 next build",
+    "prebuild": "ts-node --compiler-options '{\"module\":\"commonjs\"}' scripts/build-rosters.ts || node --loader ts-node/esm scripts/build-rosters.ts || node scripts/build-rosters.js",
     "start": "next start",
     "start:webpack": "next start",
     "lint": "eslint . --ext .ts,.tsx",
@@ -40,6 +41,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "ts-node": "^10.9.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
