--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,19 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[[redirects]]
+from = "/"
+to = "/it"
+status = 302
+force = true
+
+[[redirects]]
+from = "/it/*"
+to = "/it/index.html"
+status = 200
+
+[[redirects]]
+from = "/en/*"
+to = "/en/index.html"
+status = 200
