--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 "scripts": {
   "dev": "next dev",
   "dev:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
-  "build": "npm run build:webpack",
-  "build:webpack": "next build --webpack",
+  "build": "next build",
   "prebuild": "ts-node --compiler-options '{\"module\":\"commonjs\"}' scripts/build-rosters.ts || node --loader ts-node/esm scripts/build-rosters.ts || node scripts/build-rosters.js",
   "start": "next start",
   "start:webpack": "next start",
