--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "dev:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
     "build": "next build",
-    "prebuild": "ts-node --compiler-options '{\"module\":\"commonjs\"}' scripts/build-rosters.ts || node --loader ts-node/esm scripts/build-rosters.ts || node scripts/build-rosters.js",
+    "rosters:generate": "ts-node --compiler-options '{\"module\":\"commonjs\"}' scripts/build-rosters.ts || node --loader ts-node/esm scripts/build-rosters.ts || node scripts/build-rosters.js",
     "start": "next start",
     "start:webpack": "next start",
     "lint": "eslint . --ext .ts,.tsx",
@@ -35,6 +35,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.7.0",
     "@netlify/plugin-nextjs": "^5.14.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
