Sistemazione logica players solo ESPN

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:webpack": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
-    "build": "next build",
+    "build": "NEXT_DISABLE_TURBOPACK=1 NEXT_USE_TURBOPACK=0 next build",
     "rosters:generate": "ts-node --compiler-options '{\"module\":\"commonjs\"}' scripts/build-rosters.ts || node --loader ts-node/esm scripts/build-rosters.ts || node scripts/build-rosters.js",
     "start": "next start",
     "start:webpack": "next start",
